<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <group android:checkableBehavior="single">
              <item
                  android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/nav_home" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/favoritesicon"
                android:title="@string/nav_favorites" />
        </group>

        <item android:title="@string/nav_other">
            <menu>
                <item
                    android:id="@+id/nav_comment"
                    android:icon="@drawable/comment"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/help"
                    android:title="@string/nav_help" />
                <item
                    android:id="@+id/nav_exit"
                    android:title="@string/Exit"/>
            </menu>
        </item>
    </menu>